// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test App component App component is created and rendered correctly when authStatus === NO_AUTH 1`] = `
Array [
  <section
    className="movie-card"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Fantastic Beasts: The Crimes of Grindelwald"
        src="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/moonrise-kingdom3.jpg"
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="user-block"
      >
        <a
          className="user-block__link"
          href="/login"
          onClick={[Function]}
        >
          Sign in
        </a>
      </div>
    </header>
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster"
          onClick={[Function]}
        >
          <img
            alt="Fantastic Beasts: The Crimes of Grindelwald"
            height="327"
            src="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/moonrise-kingdom1.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
            onClick={[Function]}
          >
            Fantastic Beasts: The Crimes of Grindelwald
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Documentary
            </span>
            <span
              className="movie-card__year"
            >
              2015
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <button
              className="btn btn--list movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="20"
                viewBox="0 0 19 20"
                width="19"
              >
                <use
                  xlinkHref="#add"
                />
              </svg>
              <span>
                My list
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <div
    className="page-content"
  >
    <section
      className="catalog"
    >
      <h2
        className="catalog__title visually-hidden"
      >
        Catalog
      </h2>
      <ul
        className="catalog__genres-list"
      >
        <li
          className="catalog__genres-item catalog__genres-item--active"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            All genres
          </a>
        </li>
        <li
          className="catalog__genres-item"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            Comedies
          </a>
        </li>
        <li
          className="catalog__genres-item"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            Crime
          </a>
        </li>
      </ul>
      <div>
        <div
          className="catalog__movies-list"
        />
      </div>
    </section>
    <footer
      className="page-footer"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link logo__link--light"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>,
]
`;

exports[`Test App component App component is created and rendered correctly when page is Main 1`] = `
Array [
  <section
    className="movie-card"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Fantastic Beasts: The Crimes of Grindelwald"
        src="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/moonrise-kingdom3.jpg"
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="user-block"
      >
        <div
          className="user-block__avatar"
        >
          <img
            alt="Batman"
            height="63"
            src="https://4.react.pages.academy/wtw/static/avatar/5.jpg"
            width="63"
          />
        </div>
      </div>
    </header>
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster"
          onClick={[Function]}
        >
          <img
            alt="Fantastic Beasts: The Crimes of Grindelwald"
            height="327"
            src="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/moonrise-kingdom1.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
            onClick={[Function]}
          >
            Fantastic Beasts: The Crimes of Grindelwald
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Documentary
            </span>
            <span
              className="movie-card__year"
            >
              2015
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <button
              className="btn btn--list movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="20"
                viewBox="0 0 19 20"
                width="19"
              >
                <use
                  xlinkHref="#add"
                />
              </svg>
              <span>
                My list
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <div
    className="page-content"
  >
    <section
      className="catalog"
    >
      <h2
        className="catalog__title visually-hidden"
      >
        Catalog
      </h2>
      <ul
        className="catalog__genres-list"
      >
        <li
          className="catalog__genres-item catalog__genres-item--active"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            All genres
          </a>
        </li>
        <li
          className="catalog__genres-item"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            Comedies
          </a>
        </li>
        <li
          className="catalog__genres-item"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            Crime
          </a>
        </li>
      </ul>
      <div>
        <div
          className="catalog__movies-list"
        >
          <article
            className="small-movie-card catalog__movies-card"
            id="mock-1"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height="175"
                poster="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/moonrise-kingdom2.jpg"
                type="video/webm"
                width="280"
              >
                Sorry, your browser doesn\`t support embedded videos
              </video>
            </div>
            <h3
              className="small-movie-card__title"
              onClick={[Function]}
            >
              <a
                className="small-movie-card__link"
                href="/films/mock-1"
                onClick={[Function]}
              >
                Fantastic Beasts: The Crimes of Grindelwald
              </a>
            </h3>
          </article>
          <article
            className="small-movie-card catalog__movies-card"
            id="mock-2"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height="175"
                poster="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/gangs_of_new_york2.jpg"
                type="video/webm"
                width="280"
              >
                Sorry, your browser doesn\`t support embedded videos
              </video>
            </div>
            <h3
              className="small-movie-card__title"
              onClick={[Function]}
            >
              <a
                className="small-movie-card__link"
                href="/films/mock-2"
                onClick={[Function]}
              >
                Bohemian Rhapsody
              </a>
            </h3>
          </article>
          <article
            className="small-movie-card catalog__movies-card"
            id="mock-3"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height="175"
                poster="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/pulp-fiction2.jpg"
                type="video/webm"
                width="280"
              >
                Sorry, your browser doesn\`t support embedded videos
              </video>
            </div>
            <h3
              className="small-movie-card__title"
              onClick={[Function]}
            >
              <a
                className="small-movie-card__link"
                href="/films/mock-3"
                onClick={[Function]}
              >
                Macbeth
              </a>
            </h3>
          </article>
        </div>
      </div>
    </section>
    <footer
      className="page-footer"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link logo__link--light"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>,
]
`;

exports[`Test App component App component is created and rendered correctly when page is Movie 1`] = `
<section
  className="movie-card movie-card--full"
  style={
    Object {
      "backgroundColor": "#333",
    }
  }
>
  <div
    className="movie-card__hero"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Bohemian Rhapsody"
        src="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/gangs_of_new_york3.jpg"
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="user-block"
      >
        <div
          className="user-block__avatar"
        >
          <img
            alt="Batman"
            height="63"
            src="https://4.react.pages.academy/wtw/static/avatar/5.jpg"
            width="63"
          />
        </div>
      </div>
    </header>
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__desc"
      >
        <h2
          className="movie-card__title"
        >
          Bohemian Rhapsody
        </h2>
        <p
          className="movie-card__meta"
        >
          <span
            className="movie-card__genre"
          >
            Crime
          </span>
          <span
            className="movie-card__year"
          >
            1999
          </span>
        </p>
        <div
          className="movie-card__buttons"
        >
          <button
            className="btn btn--play movie-card__button"
            onClick={[Function]}
            type="button"
          >
            <svg
              height="19"
              viewBox="0 0 19 19"
              width="19"
            >
              <use
                xlinkHref="#play-s"
              />
            </svg>
            <span>
              Play
            </span>
          </button>
          <button
            className="btn btn--list movie-card__button"
            type="button"
          >
            <svg
              height="20"
              viewBox="0 0 19 20"
              width="19"
            >
              <use
                xlinkHref="#add"
              />
            </svg>
            <span>
              My list
            </span>
          </button>
          <a
            className="btn movie-card__button"
            href="/review"
            onClick={[Function]}
          >
            Add review
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="movie-card__wrap movie-card__translate-top"
  >
    <div
      className="movie-card__info"
    >
      <div
        className="movie-card__poster movie-card__poster--big"
      >
        <img
          alt="Bohemian Rhapsody"
          height="327"
          src="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/gangs_of_new_york1.jpg"
          width="218"
        />
      </div>
      <div
        className="movie-card__desc"
      >
        <nav
          className="movie-nav movie-card__nav"
        >
          <ul
            className="movie-nav__list"
          >
            <li
              className="movie-nav__item movie-nav__item--active"
              onClick={[Function]}
            >
              <a
                className="movie-nav__link"
                href="/"
                onClick={[Function]}
              >
                Overview
              </a>
            </li>
            <li
              className="movie-nav__item"
              onClick={[Function]}
            >
              <a
                className="movie-nav__link"
                href="/"
                onClick={[Function]}
              >
                Details
              </a>
            </li>
            <li
              className="movie-nav__item"
              onClick={[Function]}
            >
              <a
                className="movie-nav__link"
                href="/"
                onClick={[Function]}
              >
                Reviews
              </a>
            </li>
          </ul>
        </nav>
        <div
          className="movie-card__text movie-card__row"
        >
          <div
            className="movie-card__text-col"
          >
            <p
              className="movie-card__details-item"
            >
              <strong
                className="movie-card__details-name"
              >
                Director
              </strong>
              <span
                className="movie-card__details-value"
              >
                Крис МакКей
              </span>
            </p>
            <p
              className="movie-card__details-item"
            >
              <strong
                className="movie-card__details-name"
              >
                Starring
              </strong>
              <span
                className="movie-card__details-value"
              >
                Арнольд Шварценеггер, Кристиан Бэйл
              </span>
            </p>
          </div>
          <div
            className="movie-card__text-col"
          >
            <p
              className="movie-card__details-item"
            >
              <strong
                className="movie-card__details-name"
              >
                Run Time
              </strong>
              <span
                className="movie-card__details-value"
              >
                320
              </span>
            </p>
            <p
              className="movie-card__details-item"
            >
              <strong
                className="movie-card__details-name"
              >
                Genre
              </strong>
              <span
                className="movie-card__details-value"
              >
                Crime
              </span>
            </p>
            <p
              className="movie-card__details-item"
            >
              <strong
                className="movie-card__details-name"
              >
                Released
              </strong>
              <span
                className="movie-card__details-value"
              >
                1999
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Test App component App component is created and rendered correctly when promoMovie === null 1`] = `
<section>
  <h2
    className="loader"
  >
    Loading... Please wait
  </h2>
</section>
`;

exports[`Test App component App component is created and rendered correctly when select Genre 1`] = `
Array [
  <section
    className="movie-card"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Fantastic Beasts: The Crimes of Grindelwald"
        src="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/moonrise-kingdom3.jpg"
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="user-block"
      >
        <div
          className="user-block__avatar"
        >
          <img
            alt="Batman"
            height="63"
            src="https://4.react.pages.academy/wtw/static/avatar/5.jpg"
            width="63"
          />
        </div>
      </div>
    </header>
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster"
          onClick={[Function]}
        >
          <img
            alt="Fantastic Beasts: The Crimes of Grindelwald"
            height="327"
            src="https://htmlacademy-react-3.appspot.com/wtw/static/film/preview/moonrise-kingdom1.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
            onClick={[Function]}
          >
            Fantastic Beasts: The Crimes of Grindelwald
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Documentary
            </span>
            <span
              className="movie-card__year"
            >
              2015
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <button
              className="btn btn--list movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="20"
                viewBox="0 0 19 20"
                width="19"
              >
                <use
                  xlinkHref="#add"
                />
              </svg>
              <span>
                My list
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <div
    className="page-content"
  >
    <section
      className="catalog"
    >
      <h2
        className="catalog__title visually-hidden"
      >
        Catalog
      </h2>
      <ul
        className="catalog__genres-list"
      >
        <li
          className="catalog__genres-item catalog__genres-item--active"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            All genres
          </a>
        </li>
        <li
          className="catalog__genres-item"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            Comedies
          </a>
        </li>
        <li
          className="catalog__genres-item"
        >
          <a
            className="catalog__genres-link"
            href="/"
            onClick={[Function]}
          >
            Crime
          </a>
        </li>
      </ul>
      <div>
        <div
          className="catalog__movies-list"
        />
      </div>
    </section>
    <footer
      className="page-footer"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link logo__link--light"
          href="/"
          onClick={[Function]}
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>,
]
`;
